# navidrome-rating-sync

./: .env.example  .gitignore  README.md  pyproject.toml
src/navidrome_sync/: __init__.py  sync.py
tests/: test_sync_logic.py
